tests/_resources/error_gcns/E013_invalid_component.gcn
# Error: Completely invalid component name
block HOUSEHOLD
{
    foobar
    {
        Y[] = C[];
    };
};
